@@ -2,7 +2,7 @@
 //
 // Title:       Force Field X.
 // Description: Force Field X - Software for Molecular Biophysics.
-// Copyright:   Copyright (c) Michael J. Schnieders 2001-2023.
+// Copyright:   Copyright (c) Michael J. Schnieders 2001-2024.
 //
 // This file is part of Force Field X.
 //
@@ -45,7 +45,7 @@ import static java.lang.Integer.parseInt;
 import static java.lang.String.format;
 import static java.lang.System.arraycopy;
 import static java.util.Arrays.copyOf;
-import static org.apache.commons.math3.util.FastMath.abs;
+import static org.apache.commons.math3.util.FastMath.*;
 
 import edu.rit.pj.Comm;
 import edu.rit.pj.ParallelTeam;
@@ -53,7 +53,7 @@ import edu.rit.pj.WorkerTeam;
 import ffx.algorithms.AlgorithmListener;
 import ffx.algorithms.Terminatable;
 import ffx.algorithms.mc.MCMove;
-import ffx.algorithms.optimize.manybody.BoxOptCell;
+import ffx.algorithms.optimize.manybody.ManyBodyCell;
 import ffx.algorithms.optimize.manybody.DistanceMatrix;
 import ffx.algorithms.optimize.manybody.EliminatedRotamers;
 import ffx.algorithms.optimize.manybody.EnergyExpansion;
@@ -81,9 +81,13 @@ import ffx.potential.bonded.Rotamer;
 import ffx.potential.bonded.RotamerLibrary;
 import ffx.potential.nonbonded.NonbondedCutoff;
 import ffx.potential.nonbonded.VanDerWaals;
+import ffx.potential.parameters.TitrationUtils;
 import ffx.potential.parsers.PDBFilter;
+import ffx.utilities.Constants;
 import ffx.utilities.ObjectPair;
 import ffx.utilities.Resources;
+import org.apache.commons.configuration2.CompositeConfiguration;
+import org.apache.commons.io.FilenameUtils;
 
 import java.io.BufferedWriter;
 import java.io.File;
@@ -107,8 +111,11 @@ import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import org.apache.commons.configuration2.CompositeConfiguration;
-import org.apache.commons.io.FilenameUtils;
+import static ffx.potential.bonded.RotamerLibrary.applyRotamer;
+import static java.lang.Integer.parseInt;
+import static java.lang.String.format;
+import static java.util.Arrays.copyOf;
+import static org.apache.commons.math3.util.FastMath.abs;
 
 /**
  * Optimize protein side-chain conformations and nucleic acid backbone conformations using rotamers.
@@ -121,347 +128,364 @@ import org.apache.commons.io.FilenameUtils;
  */
 public class RotamerOptimization implements Terminatable {
 
-  /**
-   * Logger for this class.
-   */
-  private static final Logger logger = Logger.getLogger(RotamerOptimization.class.getName());
-  /**
-   * Fallback if there is no vdW node.
-   */
-  private static final double FALLBACK_TWO_BODY_CUTOFF = 0;
-  /**
-   * MolecularAssembly to perform rotamer optimization on.
-   */
-  protected final MolecularAssembly molecularAssembly;
-  /**
-   * The Potential to evaluate during rotamer optimization.
-   */
-  protected final Potential potential;
-  /**
-   * AlgorithmListener who should receive updates as the optimization runs.
-   */
-  protected final AlgorithmListener algorithmListener;
-  /**
-   * World Parallel Java communicator.
-   */
-  private final Comm world;
-  /**
-   * Number of Parallel Java processes.
-   */
-  private final int numProc;
-  /**
-   * Rank of this process.
-   */
-  private final int rank;
-  /**
-   * Flag to indicate if this is the master process.
-   */
-  private final boolean rank0;
-  /**
-   * Flag to control the verbosity of printing.
-   */
-  private final boolean print = false;
-  /**
-   * Flag to calculate and print additional energies (mostly for debugging).
-   */
-  private final boolean verboseEnergies = true;
-  /**
-   * If true, write out an energy restart file.
-   */
-  private final boolean writeEnergyRestart = true;
-  /**
-   * Parameters for box optimization are stored here.
-   */
-  private final BoxOptimization boxOpt;
-  /**
-   * Represents the method called to obtain the directory corresponding to the current energy; will
-   * be a simple return null for potential energy evaluations. While current energy calls will fill
-   * the rotamer list with the current rotamers of the residue, other methods may skip applying the
-   * rotamer directly.
-   */
-  private final BiFunction<List<Residue>, List<Rotamer>, File> dirSupplier;
-  /**
-   * Represents the method called to obtain energy for the current rotamer or state; defaults to the
-   * existing potential energy code. May discard the input file.
-   */
-  private final ToDoubleFunction<File> eFunction;
-  /**
-   * Flag to indicate verbose logging.
-   */
-  private final boolean verbose;
-  /**
-   * The DistanceMatrix class handles calculating distances between residues.
-   */
-  private DistanceMatrix dM;
-  /**
-   * The EnergyExpansion class compute terms in the many-body energy expansion.
-   */
-  private EnergyExpansion eE;
-  /**
-   * The EliminatedRotamers class tracks eliminated rotamers and rotamer paris.
-   */
-  private EliminatedRotamers eR;
-  /**
-   * RotamerLibrary instance.
-   */
-  protected RotamerLibrary library = RotamerLibrary.getDefaultLibrary();
-  /**
-   * Parallel evaluation of quantities used during Goldstein Pair elimination.
-   */
-  private GoldsteinPairRegion goldsteinPairRegion;
-  /**
-   * Parallel evaluation of many-body energy sums.
-   */
-  private EnergyRegion energyRegion;
-  /**
-   * Flag to indicate a request to terminate the optimization.
-   */
-  private boolean terminate = false;
-  /**
-   * Flag to indicate if the algorithm is running (done == false) or completed (done == true).
-   */
-  private boolean done = true;
-  /**
-   * Two-Body cutoff distance.
-   */
-  private double twoBodyCutoffDist;
-  /**
-   * Flag to control use of 3-body terms.
-   */
-  private boolean threeBodyTerm = false;
-  /**
-   * Three-body cutoff distance.
-   */
-  private double threeBodyCutoffDist;
-  /**
-   * Interaction partners of a Residue that come after it.
-   */
-  private int[][] resNeighbors;
-  /**
-   * All interaction partners of a Residue, including prior residues.
-   */
-  private int[][] bidiResNeighbors;
-  /**
-   * Flag to prune clashes.
-   */
-  private boolean pruneClashes = true;
-  /**
-   * Flag to prune pair clashes.
-   */
-  private boolean prunePairClashes = true;
-  /**
-   * Number of permutations whose energy is explicitly evaluated.
-   */
-  private int evaluatedPermutations = 0;
-  /**
-   * Permutations are printed when modulo this field is zero.
-   */
-  private int evaluatedPermutationsPrint = 0;
-  /**
-   * List of residues to optimize; they may not be contiguous or all members of the same chain.
-   */
-  private List<Residue> residueList;
-  /**
-   * This is the optimal rotamers corresponding to residueList.
-   */
-  private int[] optimum;
+    /**
+     * Logger for this class.
+     */
+    private static final Logger logger = Logger.getLogger(RotamerOptimization.class.getName());
+    /**
+     * Fallback if there is no vdW node.
+     */
+    private static final double FALLBACK_TWO_BODY_CUTOFF = 0;
+    /**
+     * MolecularAssembly to perform rotamer optimization on.
+     */
+    protected final MolecularAssembly molecularAssembly;
+    /**
+     * The Potential to evaluate during rotamer optimization.
+     */
+    protected final Potential potential;
+    /**
+     * AlgorithmListener who should receive updates as the optimization runs.
+     */
+    protected final AlgorithmListener algorithmListener;
+    /**
+     * World Parallel Java communicator.
+     */
+    private final Comm world;
+    /**
+     * Number of Parallel Java processes.
+     */
+    private final int numProc;
+    /**
+     * Rank of this process.
+     */
+    private final int rank;
+    /**
+     * Flag to indicate if this is the master process.
+     */
+    private final boolean rank0;
+    /**
+     * Flag to control the verbosity of printing.
+     */
+    private final boolean print = false;
+    /**
+     * Flag to calculate and print additional energies (mostly for debugging).
+     */
+    private final boolean verboseEnergies = true;
 
-  /**
-   * Size of the sliding window.
-   */
-  private int windowSize = 7;
-  /**
-   * The distance the sliding window moves.
-   */
-  private int increment = 3;
-  /**
-   * In sliding window, whether to revert an unfavorable change.
-   */
-  private boolean revert;
-  /**
-   * The sliding window direction.
-   */
-  private Direction direction = Direction.FORWARD;
+    public void setWriteEnergyRestart(boolean writeEnergyRestart) {
+        this.writeEnergyRestart = writeEnergyRestart;
+    }
 
-  /**
-   * The distance that the distance matrix checks for.
-   */
-  private double distance = 2.0;
-  /**
-   * Default distance method is to find the shortest distance between residues.
-   */
-  private DistanceMethod distanceMethod = DistanceMethod.RESIDUE;
-  /**
-   * The algorithm to use for rotamer optimization.
-   */
-  private Algorithm algorithm = null;
+    /**
+     * If true, write out an energy restart file.
+     */
+    private boolean writeEnergyRestart = true;
+    /**
+     * Parameters for box optimization are stored here.
+     */
+    private final BoxOptimization boxOpt;
+    /**
+     * Represents the method called to obtain the directory corresponding to the current energy; will
+     * be a simple return null for potential energy evaluations. While current energy calls will fill
+     * the rotamer list with the current rotamers of the residue, other methods may skip applying the
+     * rotamer directly.
+     */
+    private final BiFunction<List<Residue>, List<Rotamer>, File> dirSupplier;
+    /**
+     * Represents the method called to obtain energy for the current rotamer or state; defaults to the
+     * existing potential energy code. May discard the input file.
+     */
+    private final ToDoubleFunction<File> eFunction;
+    /**
+     * Flag to indicate verbose logging.
+     */
+    private final boolean verbose;
+    /**
+     * The DistanceMatrix class handles calculating distances between residues.
+     */
+    private DistanceMatrix dM;
+    /**
+     * The EnergyExpansion class compute terms in the many-body energy expansion.
+     */
+    private EnergyExpansion eE;
+    /**
+     * The EliminatedRotamers class tracks eliminated rotamers and rotamer paris.
+     */
+    private EliminatedRotamers eR;
+    /**
+     * RotamerLibrary instance.
+     */
+    protected RotamerLibrary library = RotamerLibrary.getDefaultLibrary();
+    /**
+     * Parallel evaluation of quantities used during Goldstein Pair elimination.
+     */
+    private GoldsteinPairRegion goldsteinPairRegion;
+    /**
+     * Parallel evaluation of many-body energy sums.
+     */
+    private EnergyRegion energyRegion;
+    /**
+     * Flag to indicate a request to terminate the optimization.
+     */
+    private boolean terminate = false;
+    /**
+     * Flag to indicate if the algorithm is running (done == false) or completed (done == true).
+     */
+    private boolean done = true;
+    /**
+     * Two-Body cutoff distance.
+     */
+    private double twoBodyCutoffDist;
+    /**
+     * Flag to control use of 3-body terms.
+     */
+    private boolean threeBodyTerm = false;
+    /**
+     * Three-body cutoff distance.
+     */
+    private double threeBodyCutoffDist;
+    /**
+     * Interaction partners of a Residue that come after it.
+     */
+    private int[][] resNeighbors;
+    /**
+     * All interaction partners of a Residue, including prior residues.
+     */
+    private int[][] bidiResNeighbors;
+    /**
+     * Flag to prune clashes.
+     */
+    private boolean pruneClashes = true;
+    /**
+     * Flag to prune pair clashes.
+     */
+    private boolean prunePairClashes = true;
+    /**
+     * Number of permutations whose energy is explicitly evaluated.
+     */
+    private int evaluatedPermutations = 0;
+    /**
+     * Permutations are printed when modulo this field is zero.
+     */
+    private int evaluatedPermutationsPrint = 0;
+    /**
+     * List of residues to optimize; they may not be contiguous or all members of the same chain.
+     */
 
-  /**
-   * Flag to indicate use of the Goldstein criteria instead of the less stringent Dead-End
-   * Elimination criteria.
-   */
-  private boolean useGoldstein = true;
-  /**
-   * The number of most-favorable structures to include as output.
-   */
-  private int ensembleNumber = 1;
-  /**
-   * The energy buffer applied to each elimination criteria to affect an ensemble.
-   */
-  private double ensembleBuffer = 0.0;
-  /**
-   * The step value of the energy buffer for use with ensemble search.
-   */
-  private double ensembleBufferStep = 0.5;
-  /**
-   * The energy boundary for structures to be included in the final ensemble.
-   */
-  private double ensembleEnergy = 0.0;
-  /**
-   * File to contain ensemble of structures.
-   */
-  private File ensembleFile;
-  /**
-   * PDBFilter to write out ensemble snapshots.
-   */
-  private PDBFilter ensembleFilter;
-  /**
-   * Flag to load the distance matrix as needed; if false, matrix is prefilled at the beginning of
-   * rotamer optimization.
-   */
-  private boolean lazyMatrix = false;
-  /**
-   * Clash energy threshold (kcal/mole).
-   */
-  private double clashThreshold = 25.0;
-  /**
-   * Clash energy threshold (kcal/mol) for MultiResidues, which can have much more variation in self
-   * and 2-Body energies.
-   */
-  private double multiResClashThreshold = 80.0;
-  /**
-   * Clash energy threshold (kcal/mole).
-   */
-  private double pairClashThreshold = 25.0;
-  /**
-   * Pair clash energy threshold (kcal/mol) for MultiResidues.
-   */
-  private double multiResPairClashAddn = 80.0;
-  /**
-   * An array of atomic coordinates (length 3 * the number of atoms).
-   */
-  private double[] x = null;
-  /**
-   * A flag to indicate use of the full N-Body AMOEBA potential energy during the rotamer
-   * optimization.
-   */
-  private boolean useForceFieldEnergy = false;
-  /**
-   * Threshold to eliminate nucleic acid Rotamers based on excessive correction distances; 0
-   * indicates the threshold is not being implemented.
-   */
-  private double nucleicCorrectionThreshold = 0;
-  /**
-   * The approximate energy from summing the backbone energy, self-energies, pair-energies, etc.
-   */
-  private double approximateEnergy = 0;
-  /**
-   * Minimum number of nucleic acid Rotamers to use for rotamer optimization should some be
-   * eliminated by the nucleic correction threshold.
-   */
-  private int minNumberAcceptedNARotamers = 10;
-  /**
-   * Factor by which to multiply the pruning constraints for nucleic acids.
-   */
-  private double nucleicPruningFactor = 10.0;
-  /**
-   * The arithmetic mean of 1.0 and the pruning factor, and is applied for AA-NA pairs.
-   */
-  private double nucleicPairsPruningFactor = ((1.0 + nucleicPruningFactor) / 2);
-  /**
-   * A list of all residues in the system, which is used to compute a distance matrix.
-   */
-  private List<Residue> allResiduesList = null;
-  /**
-   * An array of all residues in the system, which is used to compute a distance matrix.
-   */
-  private Residue[] allResiduesArray = null;
-  /**
-   * Number of residues being optimized.
-   */
-  private int nAllResidues = 0;
-  /**
-   * The array of optimum rotamers for the subset of residues being optimized during box or window
-   * optimization.
-   */
-  private int[] optimumSubset;
-  /**
-   * If true, load an energy restart file.
-   */
-  private boolean loadEnergyRestart = false;
-  /**
-   * Energy restart File instance.
-   */
-  private File energyRestartFile;
-  /**
-   * ParallelTeam instance.
-   */
-  private ParallelTeam parallelTeam;
-  /**
-   * Flag to indicate computation of 4-body energy values. This is limited to the study 4-body energy
-   * magnitudes, but is not included in the rotamer optimization.
-   */
-  private boolean compute4BodyEnergy = false;
-  /**
-   * Flag to indicate use of box optimization.
-   */
-  private boolean usingBoxOptimization = false;
-  /**
-   * If a pair of residues have two atoms closer together than the superposition threshold, the
-   * energy is set to NaN.
-   */
-  private double superpositionThreshold = 0.25;
-  /**
-   * Flag to indicate computation of a many-body expansion for original coordinates.
-   */
-  private boolean decomposeOriginal = false;
-  /**
-   * Flag to indicate use of MC optimization.
-   */
-  private boolean monteCarlo = false;
-  /**
-   * Number of MC optimization steps.
-   */
-  private int nMCSteps = 1000000;
-  /**
-   * MC temperature (K).
-   */
-  private double mcTemp = 298.15;
-  /**
-   * Check to see if proposed move has an eliminated 2-body or higher-order term.
-   */
-  private boolean mcUseAll = false;
-  /**
-   * Skips brute force enumeration in favor of pure Monte Carlo. Recommended only for testing.
-   */
-  private boolean mcNoEnum = false;
-  /**
-   * Sets whether files should be printed; true for standalone applications, false for some
-   * applications which use rotamer optimization as part of a larger process.
-   */
-  private boolean printFiles = true;
-  /**
-   * Stores states of each ensemble if printFiles is false.
-   */
-  private List<ObjectPair<ResidueState[], Double>> ensembleStates;
-  /**
-   * Maximum depth to check if a rotamer can be eliminated.
-   */
-  private int maxRotCheckDepth;
-  /**
-   * Writes energies to restart file.
-   */
-  private BufferedWriter energyWriter;
+    private double totalBoltzmann = 0;
+    private double refEnergy = 0;
+    private double[][] fraction;
+    private double[][] populationBoltzmann;
+    private double pH;
+    private double pHRestraint = 0;
+    private boolean onlyProtons = false;
+    private boolean recomputeSelf = false;
+    /**
+     * List of residues to optimize; they may not be contiguous or all members of the same chain.
+     */
+    private List<Residue> residueList;
+    /**
+     * This is the optimal rotamers corresponding to residueList.
+     */
+    private int[] optimum;
+
+    /**
+     * Size of the sliding window.
+     */
+    private int windowSize = 7;
+    /**
+     * The distance the sliding window moves.
+     */
+    private int increment = 3;
+    /**
+     * In sliding window, whether to revert an unfavorable change.
+     */
+    private boolean revert;
+    /**
+     * The sliding window direction.
+     */
+    private Direction direction = Direction.FORWARD;
+
+    /**
+     * The distance that the distance matrix checks for.
+     */
+    private double distance = 2.0;
+    /**
+     * Default distance method is to find the shortest distance between residues.
+     */
+    private DistanceMethod distanceMethod = DistanceMethod.RESIDUE;
+    /**
+     * The algorithm to use for rotamer optimization.
+     */
+    private Algorithm algorithm = null;
+
+    /**
+     * Flag to indicate use of the Goldstein criteria instead of the less stringent Dead-End
+     * Elimination criteria.
+     */
+    private boolean useGoldstein = true;
+    /**
+     * The number of most-favorable structures to include as output.
+     */
+    private int ensembleNumber = 1;
+    /**
+     * The energy buffer applied to each elimination criteria to affect an ensemble.
+     */
+    private double ensembleBuffer = 0.0;
+    /**
+     * The step value of the energy buffer for use with ensemble search.
+     */
+    private double ensembleBufferStep = 0.5;
+    /**
+     * The energy boundary for structures to be included in the final ensemble.
+     */
+    private double ensembleEnergy = 0.0;
+    /**
+     * File to contain ensemble of structures.
+     */
+    private File ensembleFile;
+    /**
+     * PDBFilter to write out ensemble snapshots.
+     */
+    private PDBFilter ensembleFilter;
+    /**
+     * Flag to load the distance matrix as needed; if false, matrix is prefilled at the beginning of
+     * rotamer optimization.
+     */
+    private boolean lazyMatrix = false;
+    /**
+     * Clash energy threshold (kcal/mole).
+     */
+    private double clashThreshold = 25.0;
+    /**
+     * Clash energy threshold (kcal/mol) for MultiResidues, which can have much more variation in self
+     * and 2-Body energies.
+     */
+    private double multiResClashThreshold = 80.0;
+    /**
+     * Clash energy threshold (kcal/mole).
+     */
+    private double pairClashThreshold = 25.0;
+    /**
+     * Pair clash energy threshold (kcal/mol) for MultiResidues.
+     */
+    private double multiResPairClashAddn = 80.0;
+    /**
+     * An array of atomic coordinates (length 3 * the number of atoms).
+     */
+    private double[] x = null;
+    /**
+     * A flag to indicate use of the full N-Body AMOEBA potential energy during the rotamer
+     * optimization.
+     */
+    private boolean useForceFieldEnergy = false;
+    /**
+     * Threshold to eliminate nucleic acid Rotamers based on excessive correction distances; 0
+     * indicates the threshold is not being implemented.
+     */
+    private double nucleicCorrectionThreshold = 0;
+    /**
+     * The approximate energy from summing the backbone energy, self-energies, pair-energies, etc.
+     */
+    private double approximateEnergy = 0;
+    /**
+     * Minimum number of nucleic acid Rotamers to use for rotamer optimization should some be
+     * eliminated by the nucleic correction threshold.
+     */
+    private int minNumberAcceptedNARotamers = 10;
+    /**
+     * Factor by which to multiply the pruning constraints for nucleic acids.
+     */
+    private double nucleicPruningFactor = 10.0;
+    /**
+     * The arithmetic mean of 1.0 and the pruning factor, and is applied for AA-NA pairs.
+     */
+    private double nucleicPairsPruningFactor = ((1.0 + nucleicPruningFactor) / 2);
+    /**
+     * A list of all residues in the system, which is used to compute a distance matrix.
+     */
+    private List<Residue> allResiduesList = null;
+    /**
+     * An array of all residues in the system, which is used to compute a distance matrix.
+     */
+    private Residue[] allResiduesArray = null;
+    /**
+     * Number of residues being optimized.
+     */
+    private int nAllResidues = 0;
+    /**
+     * The array of optimum rotamers for the subset of residues being optimized during box or window
+     * optimization.
+     */
+    private int[] optimumSubset;
+    /**
+     * If true, load an energy restart file.
+     */
+    private boolean loadEnergyRestart = false;
+    /**
+     * Energy restart File instance.
+     */
+    private File energyRestartFile;
+    /**
+     * ParallelTeam instance.
+     */
+    private ParallelTeam parallelTeam;
+    /**
+     * Flag to indicate computation of 4-body energy values. This is limited to the study 4-body energy
+     * magnitudes, but is not included in the rotamer optimization.
+     */
+    private boolean compute4BodyEnergy = false;
+    /**
+     * Flag to indicate use of box optimization.
+     */
+    private boolean usingBoxOptimization = false;
+    /**
+     * If a pair of residues have two atoms closer together than the superposition threshold, the
+     * energy is set to NaN.
+     */
+    private double superpositionThreshold = 0.25;
+    /**
+     * Flag to indicate computation of a many-body expansion for original coordinates.
+     */
+    private boolean decomposeOriginal = false;
+    /**
+     * Flag to indicate use of MC optimization.
+     */
+    private boolean monteCarlo = false;
+    /**
+     * Number of MC optimization steps.
+     */
+    private int nMCSteps = 1000000;
+    /**
+     * MC temperature (K).
+     */
+    private double mcTemp = 298.15;
+    /**
+     * Check to see if proposed move has an eliminated 2-body or higher-order term.
+     */
+    private boolean mcUseAll = false;
+    /**
+     * Skips brute force enumeration in favor of pure Monte Carlo. Recommended only for testing.
+     */
+    private boolean mcNoEnum = false;
+    /**
+     * Sets whether files should be printed; true for standalone applications, false for some
+     * applications which use rotamer optimization as part of a larger process.
+     */
+    private boolean printFiles = true;
+    /**
+     * Stores states of each ensemble if printFiles is false.
+     */
+    private List<ObjectPair<ResidueState[], Double>> ensembleStates;
+    /**
+     * Maximum depth to check if a rotamer can be eliminated.
+     */
+    private int maxRotCheckDepth;
+    /**
+     * Writes energies to restart file.
+     */
+    private BufferedWriter energyWriter;
 
   /**
    * False unless JUnit testing.
@@ -1156,7 +1180,7 @@ public class RotamerOptimization implements Terminatable {
       allResiduesArray = allResiduesList.toArray(new Residue[nAllResidues]);
 
       /*
-       * Distance matrix is  used to add residues to the sliding window based on distance cutoff,
+       * Distance matrix is used to add residues to the sliding window based on distance cutoff,
        * and for cutoff distances.
        *
        * The memory and compute overhead can be a problem for some very large structures.
@@ -1259,7 +1283,7 @@ public class RotamerOptimization implements Terminatable {
         double rotEnergy = Double.NaN;
         try {
           rotArray[nResidues - 1] = ri;
-          rotEnergy = currentEnergy(resList) + eE.getTotalRotamerPhBias(resList, rotArray);
+          rotEnergy = currentEnergy(resList) + eE.getTotalRotamerPhBias(resList, rotArray, pH, pHRestraint);
           logger.info(format(" %d Energy: %s", ++evaluatedPermutations, formatEnergy(rotEnergy)));
         } catch (ArithmeticException ex) {
           logger.info(
@@ -1279,7 +1303,30 @@ public class RotamerOptimization implements Terminatable {
     }
     return currentEnergy;
   }
+    public void setPHRestraint(double pHRestraint) {
+        this.pHRestraint = pHRestraint;
+    }
 
+    public void setpH(double pH) {
+        this.pH = pH;
+    }
+
+    public void setRecomputeSelf(boolean recomputeSelf) {
+        this.recomputeSelf = recomputeSelf;
+    }
+
+
+    public void setOnlyProtons(boolean onlyProtons) {
+        this.onlyProtons = onlyProtons;
+    }
+
+    public double getPHRestraint() {
+        return pHRestraint;
+    }
+
+    public double getPH() {
+        return pH;
+    }
   /**
    * Sets the approximate dimensions of boxes, over-riding numXYZBoxes in determining box size.
    * Rounds box size up and number of boxes down to get a whole number of boxes along each axis.
@@ -1296,7 +1343,7 @@ public class RotamerOptimization implements Terminatable {
    * @param boxBorderSize Box overlap in Angstroms.
    */
   public void setBoxBorderSize(double boxBorderSize) {
-    boxOpt.boxBorderSize = boxBorderSize;
+    boxOpt.cellBorderSize = boxBorderSize;
   }
 
   /**
@@ -1306,7 +1353,7 @@ public class RotamerOptimization implements Terminatable {
    */
   public void setBoxEnd(int boxEnd) {
     // Is -1 if boxes run to completion.
-    boxOpt.boxEnd = boxEnd;
+    boxOpt.cellEnd = boxEnd;
   }
 
   /**
@@ -1325,7 +1372,7 @@ public class RotamerOptimization implements Terminatable {
    * @param boxStart a int.
    */
   public void setBoxStart(int boxStart) {
-    boxOpt.boxStart = boxStart;
+    boxOpt.cellStart = boxStart;
   }
 
   /**
@@ -1481,7 +1528,7 @@ public class RotamerOptimization implements Terminatable {
    * @param numXYZBoxes Int[3] of number of boxes in x, y, z.
    */
   public void setNumXYZBoxes(int[] numXYZBoxes) {
-    arraycopy(numXYZBoxes, 0, boxOpt.numXYZBoxes, 0, boxOpt.numXYZBoxes.length);
+    arraycopy(numXYZBoxes, 0, boxOpt.numXYZCells, 0, boxOpt.numXYZCells.length);
   }
 
   /**
@@ -1991,7 +2038,7 @@ public class RotamerOptimization implements Terminatable {
           try {
             // Add the rotamer pH bias to the force field energy.
             amoebaEnergy =
-                currentEnergy(resList) + eE.getTotalRotamerPhBias(resList, currentRotamers);
+                currentEnergy(resList) + eE.getTotalRotamerPhBias(resList, currentRotamers, pH, pHRestraint);
           } catch (ArithmeticException ex) {
             logger.warning(
                 format(" Exception %s in calculating full AMOEBA energy for permutation %d", ex,
@@ -2196,6 +2243,207 @@ public class RotamerOptimization implements Terminatable {
     return 0.0;
   }
 
+    /**
+     * A global optimization over side-chain rotamers using a recursive algorithm and information about
+     * eliminated rotamers, rotamer pairs and rotamer triples.
+     *
+     * @param residues        Residue array.
+     * @param i               Current number of permutations.
+     * @param currentRotamers Current rotamer list.
+     */
+    public void partitionFunction(Residue[] residues, int i, int[] currentRotamers) throws Exception {
+        // This is the initialization condition.
+        double LOG10 = log(10.0);
+        double temperature = 298.15;
+        if (i == 0) {
+            totalBoltzmann = 0;
+            evaluatedPermutations = 0;
+            evaluatedPermutationsPrint = 1000;
+        }
+
+        if (evaluatedPermutations >= evaluatedPermutationsPrint) {
+            if (evaluatedPermutations % evaluatedPermutationsPrint == 0) {
+                logIfRank0(
+                        format(" The permutations have reached %10.4e.", (double) evaluatedPermutationsPrint));
+                evaluatedPermutationsPrint *= 10;
+            }
+        }
+
+        int nResidues = residues.length;
+        Residue residuei = residues[i];
+        Rotamer[] rotamersi = residuei.getRotamers();
+        int lenri = rotamersi.length;
+        if (i < nResidues - 1) {
+            for (int ri = 0; ri < lenri; ri++) {
+                if (eR.check(i, ri)) {
+                    continue;
+                }
+                boolean deadEnd = false;
+                for (int j = 0; j < i; j++) {
+                    int rj = currentRotamers[j];
+                    deadEnd = eR.check(j, rj, i, ri);
+                    if (deadEnd) {
+                        break;
+                    }
+                }
+                if (deadEnd) {
+                    continue;
+                }
+                currentRotamers[i] = ri;
+                partitionFunction(residues, i + 1, currentRotamers);
+            }
+        } else {
+            // At the end of the recursion, check each rotamer of the final residue.
+            for (int ri = 0; ri < lenri; ri++) {
+                int res = 0;
+                if (eR.check(i, ri)) {
+                    continue;
+                }
+                currentRotamers[i] = ri;
+                boolean deadEnd = false;
+                for (int j = 0; j < i; j++) {
+                    int rj = currentRotamers[j];
+                    deadEnd = eR.check(j, rj, i, ri);
+                    if (deadEnd) {
+                        break;
+                    }
+                }
+                if (!deadEnd) {
+                    evaluatedPermutations++;
+
+                    energyRegion.init(eE, residues, currentRotamers, threeBodyTerm);
+                    parallelTeam.execute(energyRegion);
+                    double selfEnergy = energyRegion.getSelf();
+                    // Recompute the self energy from a restart file run at pH 7.0
+                    if (recomputeSelf) {
+                        int count = 0;
+                        for (Residue residue : residues) {
+                            double bias7 = 0;
+                            double biasCurrent = 0;
+                            Rotamer[] rotamers = residue.getRotamers();
+                            int currentRotamer = currentRotamers[count];
+                            switch (rotamers[currentRotamer].getName()) {
+                                case "HIE" -> {
+                                    bias7 = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.HIStoHIE.pKa - 7)) -
+                                            TitrationUtils.Titration.HIStoHIE.freeEnergyDiff;
+                                    biasCurrent = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.HIStoHIE.pKa - pH)) -
+                                            TitrationUtils.Titration.HIStoHIE.freeEnergyDiff;
+                                }
+                                case "HID" -> {
+                                    bias7 = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.HIStoHID.pKa - 7)) -
+                                            TitrationUtils.Titration.HIStoHID.freeEnergyDiff;
+                                    biasCurrent = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.HIStoHID.pKa - pH)) -
+                                            TitrationUtils.Titration.HIStoHID.freeEnergyDiff;
+                                }
+                                case "ASP" -> {
+                                    bias7 = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.ASHtoASP.pKa - 7)) -
+                                            TitrationUtils.Titration.ASHtoASP.freeEnergyDiff;
+                                    biasCurrent = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.ASHtoASP.pKa - pH)) -
+                                            TitrationUtils.Titration.ASHtoASP.freeEnergyDiff;
+                                }
+                                case "GLU" -> {
+                                    bias7 = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.GLHtoGLU.pKa - 7)) -
+                                            TitrationUtils.Titration.GLHtoGLU.freeEnergyDiff;
+                                    biasCurrent = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.GLHtoGLU.pKa - pH)) -
+                                            TitrationUtils.Titration.GLHtoGLU.freeEnergyDiff;
+                                }
+                                case "LYD" -> {
+                                    bias7 = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.LYStoLYD.pKa - 7)) -
+                                            TitrationUtils.Titration.LYStoLYD.freeEnergyDiff;
+                                    biasCurrent = (LOG10 * Constants.R * temperature * (TitrationUtils.Titration.LYStoLYD.pKa - pH)) -
+                                            TitrationUtils.Titration.LYStoLYD.freeEnergyDiff;
+                                }
+                                default -> {
+                                }
+                            }
+                            selfEnergy = selfEnergy - bias7 + biasCurrent;
+                            count += 1;
+                        }
+                    }
+
+                    // Calculate the total energy of a permutation/conformation
+                    double totalEnergy = eE.getBackboneEnergy() + selfEnergy +
+                            energyRegion.getTwoBody() + energyRegion.getThreeBody();
+
+                    // Set a reference energy to evaluate all follow energies against for the Boltzmann calculations to avoid Nan/Inf errors
+                    if (evaluatedPermutations == 1) {
+                        refEnergy = totalEnergy;
+                        logger.info("The reference energy: " + refEnergy);
+                    }
+                    double boltzmannWeight = Math.exp((-1.0 / (Constants.kB * 298.15)) * (totalEnergy - refEnergy));
+
+                    // Collect Boltzmann weight for every rotamer for residues included in the optimization
+                    for (Residue residue : residues) {
+                        Rotamer[] rotamers = residue.getRotamers();
+                        int currentRotamer = currentRotamers[res];
+                        int rotIndex = rotamers[currentRotamer].getRotIndex();
+                        populationBoltzmann[res][rotIndex] += boltzmannWeight;
+                        res += 1;
+                    }
+
+                    // Sum Boltzmann of all permutations
+                    totalBoltzmann += boltzmannWeight;
+                }
+            }
+        }
+    }
+
+    /**
+     * Get reference energy for partition function boltzmann weights
+     *
+     * @return ref energy
+     */
+    public double getRefEnergy() {
+        return refEnergy;
+    }
+
+    /**
+     * Get the total boltzmann weight for an ensemble
+     *
+     * @return total boltzmann
+     */
+    public double getTotalBoltzmann() {
+        return totalBoltzmann;
+    }
+
+    /**
+     * Get the ensemble average of protonated rotamers for all titratable sites
+     *
+     * @return fraction of protonated residues
+     */
+    public double[][] getFraction() {
+        return fraction;
+    }
+
+    /**
+     * Get the Protonated Boltzmann for all sites
+     *
+     * @return fraction of protonated residues
+     */
+    public double[][] getPopulationBoltzmann() {
+        return populationBoltzmann;
+    }
+
+    /**
+     * Calculate Populations for Residues
+     *
+     * @param residues        residue array
+     * @param i               int
+     * @param currentRotamers empty array
+     * @throws Exception too many permutations to continue
+     */
+    public void getPopulations(Residue[] residues, int i, int[] currentRotamers) throws Exception {
+        fraction = new double[residues.length][54];
+        populationBoltzmann = new double[residues.length][54];
+        partitionFunction(residues, i, currentRotamers);
+        for (int m = 0; m < fraction.length; m++) {
+            for (int n = 0; n < 54; n++) {
+                fraction[m][n] = populationBoltzmann[m][n] / totalBoltzmann;
+            }
+        }
+        logger.info("\n   Total permutations evaluated: " + evaluatedPermutations);
+    }
+
   /**
    * Return an integer array of optimized rotamers following rotamer optimization.
    *
@@ -2213,14 +2461,15 @@ public class RotamerOptimization implements Terminatable {
    */
   private double independent(List<Residue> residues) {
     double e = 0.0;
-    List<Residue> rList = new ArrayList<>(Collections.nCopies(1, null));
+    List<Residue> singletonResidue = new ArrayList<>(Collections.nCopies(1, null));
     for (int i = 0; i < residues.size(); i++) {
       Residue residue = residues.get(i);
-      rList.set(0, residue);
+      singletonResidue.set(0, residue);
       logger.info(format(" Optimizing %s side-chain.", residue));
       Rotamer[] rotamers = residue.getRotamers();
       e = Double.MAX_VALUE;
-      int bestRotamer = -1;
+      int bestRotamer = 0;
+      double startingEnergy = 0.0;
       for (int j = 0; j < rotamers.length; j++) {
         Rotamer rotamer = rotamers[j];
         RotamerLibrary.applyRotamer(residue, rotamer);
@@ -2230,24 +2479,37 @@ public class RotamerOptimization implements Terminatable {
         double newE = Double.NaN;
         try {
           if (rotamer.isTitrating) {
-            newE = currentEnergy(rList) + rotamer.getRotamerPhBias();
+            newE = currentEnergy(singletonResidue) + rotamer.getRotamerPhBias();
           } else {
-            newE = currentEnergy(rList);
+            newE = currentEnergy(singletonResidue);
+          }
+          // Report energies relative to the first rotamer.
+          if (j == 0) {
+            startingEnergy = newE;
+            newE = 0.0;
+          } else {
+            newE -= startingEnergy;
+          }
+          logger.info(format("  Energy %8s %-2d: %s", residue.toString(rotamers[j]), j, formatEnergy(newE)));
+          double singularityThreshold = -100000;
+          if (newE < singularityThreshold) {
+            String message = format("   Rejecting as energy (%s << %s) is likely an error.", formatEnergy(newE), formatEnergy(singularityThreshold));
+            logger.info(message);
+            newE = Double.MAX_VALUE;
           }
         } catch (ArithmeticException ex) {
-          logger.fine(format(" Exception %s in energy calculations during independent for %s-%d", ex,
-              residue, j));
+          logger.info(format(" Exception %s in energy calculations during independent for %s-%d", ex, residue, j));
         }
         if (newE < e) {
           e = newE;
           bestRotamer = j;
         }
       }
-      if (bestRotamer > -1) {
-        Rotamer rotamer = rotamers[bestRotamer];
-        RotamerLibrary.applyRotamer(residue, rotamer);
-        optimum[i] = bestRotamer;
-      }
+      Rotamer rotamer = rotamers[bestRotamer];
+      RotamerLibrary.applyRotamer(residue, rotamer);
+      optimum[i] = bestRotamer;
+      logger.info(format(" Best Energy %8s %-2d: %s", residue.toString(rotamer), bestRotamer, formatEnergy(e)));
+
       if (algorithmListener != null) {
         algorithmListener.algorithmUpdate(molecularAssembly);
       }
@@ -2510,7 +2772,7 @@ public class RotamerOptimization implements Terminatable {
 
       try {
         // Add the force field energy to the pH bias.
-        e = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimumSubset);
+        e = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimumSubset, pH, pHRestraint);
       } catch (ArithmeticException ex) {
         e = Double.NaN;
         logger.severe(
@@ -2767,7 +3029,7 @@ public class RotamerOptimization implements Terminatable {
     double e = Double.NaN;
     try {
       // Add the force field energy to the pH bias.
-      e = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimumSubset);
+      e = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimumSubset, pH, pHRestraint);
     } catch (ArithmeticException ex) {
       logger.severe(
           format(" Exception %s in calculating current energy at the end of self and pairs", ex));
@@ -2880,7 +3142,7 @@ public class RotamerOptimization implements Terminatable {
       double fullEnergy = 0;
       try {
         // Add the force field energy to the pH bias.
-        fullEnergy = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimum);
+        fullEnergy = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimum, pH, pHRestraint);
       } catch (Exception ex) {
         logger.severe(format(" Exception %s in calculating full energy; FFX shutting down", ex));
       }
@@ -2901,7 +3163,7 @@ public class RotamerOptimization implements Terminatable {
       RotamerLibrary.applyRotamer(residue, rotamer);
       if (useForceFieldEnergy) {
         try {
-          e = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimum);
+          e = currentEnergy(residueList) + eE.getTotalRotamerPhBias(residueList, optimum, pH, pHRestraint);
         } catch (ArithmeticException ex) {
           logger.fine(
               format(" Exception %s in calculating full AMOEBA energy at the end of brute force",
@@ -3205,15 +3467,11 @@ public class RotamerOptimization implements Terminatable {
   }
 
   private void applyEliminationCriteria(Residue[] residues) {
-    // allocateEliminationMemory is now called for all algorithms in rotamerEnergies method.
-    // allocateEliminationMemory(residues);
-
     if (verboseEnergies) {
       try {
         logIfRank0(format("\n Beginning Energy %s", formatEnergy(currentEnergy(residues))));
       } catch (ArithmeticException ex) {
-        logger.severe(
-            format(" Exception %s in calculating beginning energy; FFX shutting down.", ex));
+        logger.severe(format(" Exception %s in calculating beginning energy; FFX shutting down.", ex));
       }
     }
 
@@ -3467,8 +3725,7 @@ public class RotamerOptimization implements Terminatable {
     int loaded = 0;
     if (loadEnergyRestart) {
       if (usingBoxOptimization) {
-        loaded = eE.loadEnergyRestart(energyRestartFile, residues, boxOpt.boxLoadIndex,
-            boxOpt.boxLoadCellIndices);
+        loaded = eE.loadEnergyRestart(energyRestartFile, residues, boxOpt.boxLoadIndex, boxOpt.boxLoadCellIndices);
       } else {
         loaded = eE.loadEnergyRestart(energyRestartFile, residues);
       }
@@ -4414,11 +4671,11 @@ public class RotamerOptimization implements Terminatable {
     /**
      * Number of boxes for box optimization in X, Y, Z.
      */
-    public final int[] numXYZBoxes = {3, 3, 3};
+    public final int[] numXYZCells = {3, 3, 3};
     /**
      * Box border size.
      */
-    public double boxBorderSize = 0;
+    public double cellBorderSize = 0;
     /**
      * Approximate box size.
      */
@@ -4430,11 +4687,11 @@ public class RotamerOptimization implements Terminatable {
     /**
      * Index of the first box to optimize.
      */
-    public int boxStart = 0;
+    public int cellStart = 0;
     /**
      * Index of the last box to optimize.
      */
-    public int boxEnd = -1;
+    public int cellEnd = -1;
     /**
      * Flag to indicate manual definition of a super box.
      */
@@ -4477,33 +4734,32 @@ public class RotamerOptimization implements Terminatable {
 
       // Cells indexed by x*(YZ divisions) + y*(Z divisions) + z.
       int totalCells = getTotalCellCount(crystal); // Also initializes cell count if using -bB
-      if (boxStart > totalCells - 1) {
-        logger.severe(format(
-            " FFX shutting down: Box optimization start is out of range of total boxes: %d > %d",
-            (boxStart + 1), totalCells));
+      if (cellStart > totalCells - 1) {
+        logIfRank0(format(" First cell out of range (%d) -- reset to first cell.", cellStart + 1));
+        cellStart = 0;
       }
-      if (boxEnd > totalCells - 1) {
-        boxEnd = totalCells - 1;
-        logIfRank0(" Final box out of range: reset to last possible box.");
-      } else if (boxEnd < 0) {
-        boxEnd = totalCells - 1;
+      if (cellEnd > totalCells - 1) {
+        // Warn the user if the box end was explicitly set incorrectly.
+        if (cellEnd != -1 && cellEnd != Integer.MAX_VALUE) {
+          logIfRank0(format(" Final cell out of range (%d) -- reset to last cell.", cellEnd + 1));
+        }
+        cellEnd = totalCells - 1;
+      } else if (cellEnd < 0) {
+        cellEnd = totalCells - 1;
       }
-      BoxOptCell[] cells = loadCells(crystal, residues);
+      ManyBodyCell[] cells = loadCells(crystal, residues);
       int numCells = cells.length;
-      logIfRank0(format(" Optimizing boxes  %d  to  %d", (boxStart + 1), (boxEnd + 1)));
+      logIfRank0(format(" Optimizing cells %d to %d", (cellStart + 1), (cellEnd + 1)));
       for (int i = 0; i < numCells; i++) {
-        BoxOptCell celli = cells[i];
-        List<Residue> residueSubsetList = celli.getResiduesAsList();
-        int[] cellIndices = celli.getXYZIndex();
-        logIfRank0(format("\n Iteration %d of the box optimization.", (i + 1)));
-        logIfRank0(format(" Cell index (linear): %d", (celli.getLinearIndex() + 1)));
-        logIfRank0(format(" Cell xyz indices: x = %d, y = %d, z = %d", cellIndices[0] + 1,
-            cellIndices[1] + 1, cellIndices[2] + 1));
+        ManyBodyCell manyBodyCell = cells[i];
+        List<Residue> residueSubsetList = manyBodyCell.getResiduesAsList();
+        int[] cellIndices = manyBodyCell.getABCIndices();
+        logIfRank0(format("\n Iteration %d of cell based optimization.", (i + 1)));
+        logIfRank0(manyBodyCell.toString());
         int nResidueSubset = residueSubsetList.size();
         if (nResidueSubset > 0) {
           if (rank0 && writeEnergyRestart && printFiles) {
-            String boxHeader = format(" Box %d: %d,%d,%d", i + 1, cellIndices[0], cellIndices[1],
-                cellIndices[2]);
+            String boxHeader = format(" Box %d: %d,%d,%d", i + 1, cellIndices[0], cellIndices[1], cellIndices[2]);
             try {
               energyWriter.append(boxHeader);
               energyWriter.newLine();
@@ -4511,7 +4767,6 @@ public class RotamerOptimization implements Terminatable {
               logger.log(Level.SEVERE, " Exception writing box header to energy restart file.", ex);
             }
           }
-
           if (loadEnergyRestart) {
             boxLoadIndex = i + 1;
             boxLoadCellIndices = new int[3];
@@ -4521,14 +4776,8 @@ public class RotamerOptimization implements Terminatable {
           }
 
           long boxTime = -System.nanoTime();
-          Residue firstResidue = residueSubsetList.get(0);
+          Residue firstResidue = residueSubsetList.getFirst();
           Residue lastResidue = residueSubsetList.get(nResidueSubset - 1);
-          if (firstResidue != lastResidue) {
-            logIfRank0(
-                format(" Residues %s ... %s", firstResidue.toString(), lastResidue.toString()));
-          } else {
-            logIfRank0(format(" Residue %s", firstResidue.toString()));
-          }
           if (revert) {
             ResidueState[] coordinates = ResidueState.storeAllCoordinates(residueSubsetList);
             double startingEnergy = 0;
@@ -4536,17 +4785,13 @@ public class RotamerOptimization implements Terminatable {
             try {
               startingEnergy = currentEnergy(residueSubsetList);
             } catch (ArithmeticException ex) {
-              logger.severe(
-                  format(" Exception %s in calculating starting energy of a box; FFX shutting down",
-                      ex));
+              logger.severe(format(" Exception %s in calculating starting energy of a box; FFX shutting down", ex));
             }
             globalOptimization(residueSubsetList);
             try {
               finalEnergy = currentEnergy(residueSubsetList);
             } catch (ArithmeticException ex) {
-              logger.severe(
-                  format(" Exception %s in calculating starting energy of a box; FFX shutting down",
-                      ex));
+              logger.severe(format(" Exception %s in calculating starting energy of a box; FFX shutting down", ex));
             }
             if (startingEnergy <= finalEnergy) {
               logger.info(
@@ -4563,8 +4808,7 @@ public class RotamerOptimization implements Terminatable {
             long currentTime = System.nanoTime();
             boxTime += currentTime;
             logIfRank0(format(" Time elapsed for this iteration: %11.3f sec", boxTime * 1.0E-9));
-            logIfRank0(
-                format(" Overall time elapsed: %11.3f sec", (currentTime + beginTime) * 1.0E-9));
+            logIfRank0(format(" Overall time elapsed: %11.3f sec", (currentTime + beginTime) * 1.0E-9));
           } else {
             globalOptimization(residueSubsetList);
             // Copy sliding window optimal rotamers into the overall optimum array.
@@ -4576,8 +4820,7 @@ public class RotamerOptimization implements Terminatable {
             long currentTime = System.nanoTime();
             boxTime += currentTime;
             logIfRank0(format(" Time elapsed for this iteration: %11.3f sec", boxTime * 1.0E-9));
-            logIfRank0(
-                format(" Overall time elapsed: %11.3f sec", (currentTime + beginTime) * 1.0E-9));
+            logIfRank0(format(" Overall time elapsed: %11.3f sec", (currentTime + beginTime) * 1.0E-9));
           }
           if (rank0 && printFiles) {
             // Don't write a file if it's the final iteration.
@@ -4586,8 +4829,7 @@ public class RotamerOptimization implements Terminatable {
             }
             try {
               if (firstResidue != lastResidue) {
-                logIfRank0(format(" File with residues %s ... %s in window written.", firstResidue,
-                    lastResidue));
+                logIfRank0(format(" File with residues %s ... %s in window written.", firstResidue, lastResidue));
               } else {
                 logIfRank0(format(" File with residue %s in window written.", firstResidue));
               }
@@ -4702,13 +4944,13 @@ public class RotamerOptimization implements Terminatable {
         boxes[2] = crystal.c / approxBoxLength;
         for (int i = 0; i < boxes.length; i++) {
           if (boxes[i] < 1) {
-            numXYZBoxes[i] = 1;
+            numXYZCells[i] = 1;
           } else {
-            numXYZBoxes[i] = (int) boxes[i];
+            numXYZCells[i] = (int) boxes[i];
           }
         }
       }
-      for (int numXYZBox : numXYZBoxes) {
+      for (int numXYZBox : numXYZCells) {
         numCells *= numXYZBox;
       }
       return numCells;
@@ -4722,16 +4964,14 @@ public class RotamerOptimization implements Terminatable {
      * @return Filled cells.
      */
     @SuppressWarnings("fallthrough")
-    private BoxOptCell[] loadCells(Crystal crystal, Residue[] residues) {
-      double xCellBorderFracSize = (boxBorderSize / crystal.a);
-      double yCellBorderFracSize = (boxBorderSize / crystal.b);
-      double zCellBorderFracSize = (boxBorderSize / crystal.c);
-      logIfRank0(
-          format(" Number of boxes along x: %d, y: %d, z: %d", numXYZBoxes[0], numXYZBoxes[1],
-              numXYZBoxes[2]));
+    private ManyBodyCell[] loadCells(Crystal crystal, Residue[] residues) {
+      double aCellBorderFracSize = (cellBorderSize / crystal.a);
+      double bCellBorderFracSize = (cellBorderSize / crystal.b);
+      double cCellBorderFracSize = (cellBorderSize / crystal.c);
+      int numCells = cellEnd - cellStart + 1;
+      logIfRank0(format(" Number of fractional cells: %d = %d x %d x %d", numCells,  numXYZCells[0], numXYZCells[1], numXYZCells[2]));
 
-      int numCells = boxEnd - boxStart + 1;
-      BoxOptCell[] cells = new BoxOptCell[numCells];
+      ManyBodyCell[] cells = new ManyBodyCell[numCells];
       int currentIndex = 0;
       int filledCells = 0;
       int[] xyzIndices = new int[3];
@@ -4742,44 +4982,44 @@ public class RotamerOptimization implements Terminatable {
        * 4, 5, and 3 boxes along xyz would be indexed 2*5*3 + 3*3 + 2 = 41).
        * The int[] indices stores separate x, y, and z indices.
        */
-      for (int i = 0; i < numXYZBoxes[0]; i++) {
+      for (int i = 0; i < numXYZCells[0]; i++) {
         if (doBreak) {
           break;
         }
         xyzIndices[0] = i;
-        for (int j = 0; j < numXYZBoxes[1]; j++) {
+        for (int j = 0; j < numXYZCells[1]; j++) {
           if (doBreak) {
             break;
           }
           xyzIndices[1] = j;
-          for (int k = 0; k < numXYZBoxes[2]; k++) {
-            if (currentIndex < boxStart) {
+          for (int k = 0; k < numXYZCells[2]; k++) {
+            if (currentIndex < cellStart) {
               ++currentIndex;
               continue;
-            } else if (currentIndex > boxEnd) {
+            } else if (currentIndex > cellEnd) {
               doBreak = true;
               break;
             }
             xyzIndices[2] = k;
             double[] fracCoords = new double[6];
-            fracCoords[0] = (((1.0 * i) / numXYZBoxes[0]) - xCellBorderFracSize);
-            fracCoords[1] = (((1.0 * j) / numXYZBoxes[1]) - yCellBorderFracSize);
-            fracCoords[2] = (((1.0 * k) / numXYZBoxes[2]) - zCellBorderFracSize);
-            fracCoords[3] = (((1.0 + i) / numXYZBoxes[0]) + xCellBorderFracSize);
-            fracCoords[4] = (((1.0 + j) / numXYZBoxes[1]) + yCellBorderFracSize);
-            fracCoords[5] = (((1.0 + k) / numXYZBoxes[2]) + zCellBorderFracSize);
-            cells[filledCells++] = new BoxOptCell(fracCoords, xyzIndices, currentIndex);
+            fracCoords[0] = (((1.0 * i) / numXYZCells[0]) - aCellBorderFracSize);
+            fracCoords[1] = (((1.0 * j) / numXYZCells[1]) - bCellBorderFracSize);
+            fracCoords[2] = (((1.0 * k) / numXYZCells[2]) - cCellBorderFracSize);
+            fracCoords[3] = (((1.0 + i) / numXYZCells[0]) + aCellBorderFracSize);
+            fracCoords[4] = (((1.0 + j) / numXYZCells[1]) + bCellBorderFracSize);
+            fracCoords[5] = (((1.0 + k) / numXYZCells[2]) + cCellBorderFracSize);
+            cells[filledCells++] = new ManyBodyCell(fracCoords, xyzIndices, currentIndex);
             ++currentIndex;
           }
         }
       }
       assignResiduesToCells(crystal, residues, cells);
-      for (BoxOptCell cell : cells) {
-        cell.sortBoxResidues();
+      for (ManyBodyCell cell : cells) {
+        cell.sortCellResidues();
       }
       switch (direction) {
         case BACKWARD:
-          BoxOptCell[] tempCells = new BoxOptCell[numCells];
+          ManyBodyCell[] tempCells = new ManyBodyCell[numCells];
           for (int i = 0; i < numCells; i++) {
             tempCells[i] = cells[numCells - (i + 1)];
           }
@@ -4801,12 +5041,12 @@ public class RotamerOptimization implements Terminatable {
      * @param residues List of residues to be optimized.
      * @param cells    BoxOptCell instance.
      */
-    private void assignResiduesToCells(Crystal crystal, Residue[] residues, BoxOptCell[] cells) {
+    private void assignResiduesToCells(Crystal crystal, Residue[] residues, ManyBodyCell[] cells) {
       // Search through residues, add them to all boxes containing their
       // fractional coordinates.
       int nSymm = crystal.spaceGroup.getNumberOfSymOps();
 
-      for (BoxOptCell cell : cells) {
+      for (ManyBodyCell cell : cells) {
         Set<Residue> toAdd = new HashSet<>();
         for (int iSymm = 0; iSymm < nSymm; iSymm++) {
           SymOp symOp = crystal.spaceGroup.getSymOp(iSymm);
